# LegoRockRaiders

./: .gitignore  CMakeLists.txt  README.md  main.c  types.h
game/: LegoRR_DEBUG.ilk
lib/d3drm/: source.txt
lib/dxguid/: readme.txt
src/: CMakeLists.txt
src/CLGen/: CMakeLists.txt  main.c  registry.c  registry.h  util.c  util.h
src/LegoRR/: 3DSound.c  3DSound.h  CMakeLists.txt  G98CMovie.cpp  G98CMovie.hpp  activities.c  activities.h  advisor.c  advisor.h  aitask.c  aitask.h  anim_clone.c  anim_clone.h  animation.c  animation.h  bmp.c  bmp.h  bubble.c  bubble.h  building.c  building.h  common.h  compress.c  compress.h  config.c  config.h  construction.c  construction.h  container.c  container.h  creature.c  creature.h  credits.c  credits.h  damage_font.c  damage_font.h  dependencies.c  dependencies.h  detail.c  detail.h  (+149 more)
src/LegoRR/platform/: d3drm.c
src/LegoRR/resource/: LegoRR.rc  resource.h
src/Shared/: game_config.h  platform.h  types.h
